<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kxh="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:background="@drawable/tab_bg"
       android:orientation="horizontal">
       <com.itest.ChangeColorIconWithText
           android:id="@+id/id_indicator_one"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:layout_weight="1"
           android:padding="5dp"
           kxh:color="#ff45c01a"
           kxh:icon="@drawable/ic_menu_start_conversation"
           kxh:text="@string/tab_weiChat"
           kxh:text_size="12sp"
           >
       </com.itest.ChangeColorIconWithText>
       <com.itest.ChangeColorIconWithText
           android:id="@+id/id_indicator_two"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:layout_weight="1"
           android:padding="5dp"
           kxh:color="#ff45c01a"
           kxh:icon="@drawable/ic_menu_friendslist"
           kxh:text="@string/tab_contact"
           kxh:text_size="12sp" />

       <com.itest.ChangeColorIconWithText
           android:id="@+id/id_indicator_three"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:layout_weight="1"
           android:padding="5dp"
           kxh:color="#ff45c01a"
           kxh:icon="@drawable/ic_menu_emoticons"
           kxh:text="@string/tab_found"
           kxh:text_size="12sp" />

       <com.itest.ChangeColorIconWithText
           android:id="@+id/id_indicator_four"
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:layout_weight="1"
           android:padding="5dp"
           kxh:color="#ff45c01a"
           kxh:icon="@drawable/ic_menu_allfriends"
           kxh:text="@string/tab_me"
           kxh:text_size="12sp" />
   </LinearLayout>
</LinearLayout>
